--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,13 @@
 <body>
 <div class="row">
     <div class="col">
-        <canvas id="sandbox" width="1920" height="1080"></canvas>
+        <canvas id="sandbox" width="640" height="480"></canvas>
     </div>
 </div>
 <div class="row">
     <div class="col">
-        <button id="start_button" type="button" class="btn btn-primary" onclick="onPressedStartBtn();">Start</button>
-        <button id="stop_button" type="button" class="btn btn-danger" onclick="onPressedStopBtn();" disabled>Stop</button>
+        <button id="prev_button" type="button" class="btn btn-danger" onclick="onPressedPrevBtn();">Prev</button>
+        <button id="next_button" type="button" class="btn btn-primary" onclick="onPressedNextBtn();">Next</button>
     </div>
 </div>
 
