--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>TC Animation Sandbox</title>
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 
 <script src="js/gycanvas/Node.js"></script>
-<script src="./js/gycanvas/Animation.js"></script>
-<script src="./js/gycanvas/Engine.js"></script>
-<script src="./js/gycanvas/Main.js"></script>
-<script>
+<script src="js/gycanvas/Animation.js"></script>
+<script src="js/gycanvas/Engine.js"></script>
+<script src="js/Main.js"></script>
 
-</script>
 <body>
 <div class="row">
     <div class="col">
